--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,26 @@ language: python
 python:
   - 2.7
   - 3.5
+  
+addons:
+  apt:
+    packages:
+      - pandoc
 
 install:
   - python setup.py install
 
 script:
   - audioscrape "cerulean crayons"
+  
+before_deploy:
+  - pandoc --from=markdown --to=rst --output=README.rst README.md
+  - rm README.md
 
 deploy:
   provider: pypi
   user: carlthome
+  skip_cleanup: true
   on:
     tags: true
     branch: master
