--- a/.travis.yml
+++ b/.travis.yml
@@ -8,18 +8,17 @@ cache:
   directories:
     - "$HOME/miniconda2"
     - "$HOME/miniconda3"
-
+    
 before_install:   
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+  - if [ "$TRAVIS_PYTHON_VERSION" == "2.7" ]; then
       wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
       export MINICONDA="$HOME/miniconda2";
     else
       wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
       export MINICONDA="$HOME/miniconda3";
     fi
-  - bash miniconda.sh -bfp $MINICONDA;
+  - bash miniconda.sh -bfp "$MINICONDA"
   - export PATH="$MINICONDA/bin:$PATH"
-  - hash -r
   - conda install -yc conda-forge pandoc
 
 install:
