--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 - pip install .
 - pip install pytest pytest-pep8 pytest-cov
 script:
-- pytest --pep8 --cov=. tests
+- pytest --pep8 --cov=.
 - audioscrape "cerulean crayons"
 deploy:
   provider: pypi
