--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ cache: pip
 install:
 - pip install .
 - pip install pytest-cov flake8
+- sudo apt-get install ffmpeg
 script:
 - pytest --cov=audioscrape
 - flake8
