--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,13 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
 ]
-dependencies = ["youtube-dl", "pafy", "tqdm", "requests", "soundcloud-lib"]
+dependencies = [
+    "youtube-dl @ git+https://github.com/ytdl-org/youtube-dl@fa7f0effbe4e14fcf70e1dc4496371c9862b64b9",
+    "pafy",
+    "tqdm",
+    "requests",
+    "soundcloud-lib",
+]
 dynamic = ["version"]
 
 [project.scripts]
