Show info logging during pytest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,3 +38,7 @@ write_to = "audioscrape/version.py"
 
 [tool.black]
 line-length = 120
+
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "INFO"
