--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  test:
+  audioscrape:
     uses: carlthome/workflows/.github/workflows/python.yaml@main
     with:
       package-name: audioscrape
