Set local_scheme = "no-local-version"

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ Bugs = "https://github.com/carlthome/audioscrape/issues"
 
 [tool.setuptools_scm]
 write_to = "audioscrape/version.py"
+local_scheme = "no-local-version"
 
 [tool.black]
 line-length = 120
