--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,7 @@ jobs:
     if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/heads/main') }}
     uses: carlthome/workflows/.github/workflows/python.yaml@main
     with:
-      package-name: "audioscrape"
+      package-name: audioscrape
       package-index-name: TestPyPI
       package-index-url: https://test.pypi.org/legacy
 
@@ -32,6 +32,6 @@ jobs:
     if: ${{ github.event_name == 'release' && github.event.action == 'published' }}
     uses: carlthome/workflows/.github/workflows/python.yaml@main
     with:
-      package-name: "audioscrape"
+      package-name: audioscrape
       package-index-name: PyPI
       package-index-url: https://pypi.org
