--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,9 @@ on:
     branches:
       - main
 
+env:
+  PACKAGE: audioscrape
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -21,10 +24,16 @@ permissions:
 
 jobs:
   test:
+    if: ${{ github.event_name == 'pull_request' }}
+    uses: carlthome/workflows/.github/workflows/python.yaml@main
+    with:
+      package-name: ${{ env.PACKAGE }}
+
+  pre-release:
     if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/heads/main') }}
     uses: carlthome/workflows/.github/workflows/python.yaml@main
     with:
-      package-name: audioscrape
+      package-name: ${{ env.PACKAGE }}
       package-index-name: TestPyPI
       package-index-url: https://test.pypi.org/legacy
 
@@ -32,6 +41,6 @@ jobs:
     if: ${{ github.event_name == 'release' && github.event.action == 'published' }}
     uses: carlthome/workflows/.github/workflows/python.yaml@main
     with:
-      package-name: audioscrape
+      package-name: ${{ env.PACKAGE }}
       package-index-name: PyPI
       package-index-url: https://pypi.org
