--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,9 +12,6 @@ on:
     branches:
       - main
 
-env:
-  PACKAGE_NAME: audioscrape
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -27,13 +24,13 @@ jobs:
     if: ${{ github.event_name == 'pull_request' }}
     uses: carlthome/workflows/.github/workflows/python.yaml@main
     with:
-      package-name: ${{ env.PACKAGE_NAME }}
+      package-name: audioscrape
 
   pre-release:
     if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/heads/main') }}
     uses: carlthome/workflows/.github/workflows/python.yaml@main
     with:
-      package-name: ${{ env.PACKAGE_NAME }}
+      package-name: audioscrape
       package-index-name: TestPyPI
       package-index-url: https://test.pypi.org/legacy
 
@@ -41,6 +38,6 @@ jobs:
     if: ${{ github.event_name == 'release' && github.event.action == 'published' }}
     uses: carlthome/workflows/.github/workflows/python.yaml@main
     with:
-      package-name: ${{ env.PACKAGE_NAME }}
+      package-name: audioscrape
       package-index-name: PyPI
       package-index-url: https://pypi.org
