Use vars.PACKAGE_NAME

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,21 +19,18 @@ concurrency:
 permissions:
   id-token: write
 
-env:
-  PACKAGE_NAME: audioscrape
-
 jobs:
   test:
     if: ${{ github.event_name == 'pull_request' }}
     uses: carlthome/workflows/.github/workflows/python.yaml@main
     with:
-      package-name: ${{ env.PACKAGE_NAME }}
+      package-name: ${{ vars.PACKAGE_NAME }}
 
   pre-release:
     if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/heads/main') }}
     uses: carlthome/workflows/.github/workflows/python.yaml@main
     with:
-      package-name: ${{ env.PACKAGE_NAME }}
+      package-name: ${{ vars.PACKAGE_NAME }}
       package-index-name: TestPyPI
       package-index-url: https://test.pypi.org
       package-index-upload-url: https://test.pypi.org/legacy/
@@ -44,7 +41,7 @@ jobs:
     if: ${{ github.event_name == 'release' && github.event.action == 'published' }}
     uses: carlthome/workflows/.github/workflows/python.yaml@main
     with:
-      package-name: ${{ env.PACKAGE_NAME }}
+      package-name: ${{ vars.PACKAGE_NAME }}
       package-index-name: PyPI
       package-index-url: https://pypi.org
       package-index-upload-url: https://upload.pypi.org/legacy/
