--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "audioscrape"
 authors = [{ name = "Carl Thomé", email = "carlthome@gmail.com" }]
-description = "Scrape online audio with a simple command-line interface."
+description = "Scrape online audio with a simple command-line interface"
 readme = "README.md"
 requires-python = ">=3.8"
 keywords = ["audio", "music", "sound"]
